--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=7">
-        <meta name="description" content="Empresa dedicada al desarrollo de videojuegos Indie.">
-        <meta name="keywords" content="Juegos, videojuegos, Ocull, Games, videojuegos moviles, móvil, juegos para movil">
+        <meta name="description" content="Company dedicated to the development of Indie video games.">
+        <meta name="keywords" content="games, videogames, Ocull, Games, mobile games, mobile, mobile gaming">
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="shortcut icon" href="./media/favicon.ico" type="image/x-icon">
