Pagina inicial creada

--- a/es/index.html
+++ b/es/index.html
@@ -25,6 +25,38 @@
             </nav>
         </header>
         <main>
+            <h3>Nosotros como empresa</h3>
+            <aside>
+                <article>
+                    <section>
+                        <label for="image1">
+                            <img id="image1" src="../media/images/kanban.jpg" alt="Kanban">
+                            <caption><h4>Innovamos en el sector</h4></caption>
+                            <p>Nos destacamos por innovar en el desarrollo de videojuegos, creando experiencias revolucionarias con nuevas tecnologías y mecánicas de juego.</p>
+                        </label>
+                    </section>
+                </article>
+                <hr>
+                <article>
+                    <section>
+                        <label for="image2">
+                            <img id="image2" src="../media/images/idea.jpg" alt="Idea">
+                            <caption><h4>Perseguimos nuestra idea</h4></caption>
+                            <p>Buscamos constantemente la excelencia creativa en cada aspecto del desarrollo de videojuegos, desde conceptos innovadores hasta la implementación de mecánicas únicas.</p>
+                        </label>
+                    </section>
+                </article>
+                <hr>
+                <article>
+                    <section>
+                        <label for="image3">
+                            <img id="image3" src="../media/images/historia.jpg" alt="Vampyr">
+                            <caption><h4>Desarrollamos la historia</h4></caption>
+                            <p>Nos especializamos en el desarrollo de historias envolventes en el mundo de los videojuegos, creando tramas cautivadoras, personajes memorables y decisiones impactantes para sumergir a los jugadores en experiencias únicas.</p>
+                        </label>
+                    </section>
+                </article>
+            </aside>
         </main>
         <footer>
             <p>&copy; <span>Copyright</span> - Ocull Games 2023</p>
