--- a/index.html
+++ b/index.html
@@ -1,41 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=7">
-        <meta name="description" content="Company dedicated to the development of Indie video games.">
-        <meta name="keywords" content="games, videogames, Ocull, Games, mobile games, mobile, mobile gaming">
-        <link rel="stylesheet" href="./css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <link rel="shortcut icon" href="./media/favicon.ico" type="image/x-icon">
-        <title>Home - Ocull Games</title>
-    </head>
-    <body>
-        <header id="header">
-            <button id="openMenu"><i class="material-symbols-outlined">menu</i></button>
-            <a href="./index.html"><h3>Ocull <span>Games</span></h3></a>
-            <nav id="menu">
-                <menu>
-                    <li><p><a href="./index.html" class="active">Home</a></p></li>
-                    <li><p><a href="./about-us.html">About Us</a></p></li>
-                    <li><p><a href="./contact.html">Contact</a></p></li>
-                    <li><p><a href="./catalogue.html">Catalogue</a></p></li>
-                </menu>
-            </nav>
-        </header>
-        <main>
-        </main>
-        <footer>
-            <p>&copy; <span>Copyright</span> - Ocull Games 2023</p>
-            <a href="mailto:soporteocullgames@gmail.com"><p>Ocull Games's Support</p></a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="Company dedicated to Indie game development.">
+    <meta name="keywords" content="Games, video games, Ocull, Games, mobile games, mobile, games for mobile">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="shortcut icon" href="./media/favicon.ico" type="image/x-icon">
+    <title>Ocull Games - Home</title>
+</head>
+<body>
+    <header id="header">
+        <button id="openMenu"><i class="material-symbols-outlined">menu</i></button>
+        <a href="./index.html"><h3>Ocull <span>Games</span></h3></a>
+        <nav id="menu">
             <menu>
-                <li><p><a href="./cookies.html">Cookies Policy</a></p></li>
-                <li><p><a href="./privacy.html">Privacy Policy</a></p></li>
-                <li><p><a href="./data-protection.html">Data-Protection Policy</a></p></li>
-                <li><p><a href="./es/index.html"><svg class="fi-es"></svg></a></p></li>
+                <li><p><a href="./index.html" class="active">Home</a></p></li>
+                <li><p><a href="./about-us.html">About Us</a></p></li>
+                <li><p><a href="./contact.html">Contact</a></p></li>
+                <li><p><a href="./catalogue.html">Catalog</a></p></li>
             </menu>
-        </footer>
-        <script src="./js/script.js"></script>
-    </body>
+        </nav>
+    </header>
+    <main>
+        <h3>Our team!</h3>
+        <aside>
+            <article>
+                <section>
+                    <label for="image1">
+                        <img id="image1" src="./media/images/kanban.jpg" alt="Kanban">
+                        <caption><h4>We Innovate in the Industry</h4></caption>
+                        <p>We stand out for innovating in the development of video games, creating revolutionary experiences with new technologies and game mechanics.</p>
+                    </label>
+                </section>
+            </article>
+            <hr>
+            <article>
+                <section>
+                    <label for="image2">
+                        <img id="image2" src="./media/images/idea.jpg" alt="Idea">
+                        <caption><h4>We Pursue Our Idea</h4></caption>
+                        <p>We constantly seek creative excellence in every aspect of game development, from innovative concepts to the implementation of unique mechanics.</p>
+                    </label>
+                </section>
+            </article>
+            <hr>
+            <article>
+                <section>
+                    <label for="image3">
+                        <img id="image3" src="./media/images/historia.jpg" alt="Vampyr">
+                        <caption><h4>We Develop the Story</h4></caption>
+                        <p>We specialize in developing engaging stories in the world of video games, creating captivating plots, memorable characters, and impactful decisions to immerse players in unique experiences.</p>
+                    </label>
+                </section>
+            </article>
+        </aside>
+    </main>
+    <footer>
+        <p>&copy; <span>Copyright</span> - Ocull Games 2023</p>
+        <a href="mailto:supportocullgames@gmail.com"><p>Ocull Games Support</p></a>
+        <menu>
+            <li><p><a href="./cookies.html">Cookie Policy</a></p></li>
+            <li><p><a href="./privacy.html">Privacy Policy</a></p></li>
+            <li><p><a href="./data-protection.html">Data Protection Policy</a></p></li>
+            <li><p><a href="./es/index.html"><svg class="fi-es"></svg></a></p></li>
+        </menu>
+    </footer>
+    <script src="./js/script.js"></script>
+</body>
 </html>
